# SVGDiagram

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  concept.html  diagram_attr.html  edge_attr.html  genindex.html  index.html  install.html  node_attr.html  objects.inv  pyproject.toml  search.html  searchindex.js  subgraph_attr.html
.doctrees/: concept.doctree  diagram_attr.doctree  edge_attr.doctree  environment.pickle  index.doctree  install.doctree  node_attr.doctree  subgraph_attr.doctree
.github/workflows/: cpp-unit-test.yml  deploy-docs.yml  es-build-test.yml  python-build-test.yml  wasm-build-test.yml
_sources/: edge_attr.md.txt  index.md.txt  node_attr.md.txt  subgraph_attr.md.txt
demo/: CMakeLists.txt  README.md  main.cpp
docs/: requirements.txt
docs/source/: concept.md  conf.py  diagram_attr.md  edge_attr.md  index.md  install.md  node_attr.md
docs/source/_static/css/: github_ribbon.css
docs/source/_templates/: layout.html
es/: index.js  package.json  svg_diagram_es.cpp  svg_diagram_wasm.cpp
es/demo/: package.json
include/: attribute_utils.h  constants.h  geometry_utils.h  svg_diagram.h  svg_draw.h  svg_nodes.h  svg_text_size.h  xml_element.h
python/: bindings.cpp  pyproject.toml
python/demo/: main.py
python/tests/docs/: test_concept.py  test_diagram_attr.py  test_edge_attr.py  test_node_attr.py  test_subgraph_attr.py  utils.py
src/: attribute_utils.cpp  geometry_utils.cpp  svg_diagram.cpp  svg_draw.cpp  svg_edge.cpp  svg_graph.cpp  svg_item.cpp  svg_node.cpp  svg_nodes.cpp  svg_text_size.cpp  xml_element.cpp
src/diagram/: svg_edge.cpp  svg_graph.cpp  svg_item.cpp  svg_node.cpp
src/svg/: svg_draw_defs.cpp
tests/: test_attribute_utils.cpp  test_geometry_utils.cpp  test_graph.cpp  test_svg_diagram.cpp  test_svg_text_size.cpp  test_utils.cpp  test_utils.h  test_xml_element.cpp
tests/docs/: test_concept.cpp  test_diagram_attr.cpp  test_edge_attr.cpp  test_node_attr.cpp  test_subgraph_attr.cpp
tests/example/: test_example_pentagon.cpp  test_example_pentagram.cpp  test_example_random.cpp  test_example_sequential.cpp  test_example_subgraph.cpp
tests/svg_draw/: test_circle.cpp  test_comment.cpp  test_defs.cpp  test_draw.cpp  test_line.cpp  test_text.cpp
tests/svg_edge/: test_arrow_empty.cpp  test_line.cpp  test_self_loop.cpp  test_spline.cpp
tests/svg_node/: test_circle.cpp  test_double_circle.cpp  test_double_ellipse.cpp  test_ellipse.cpp  test_node.cpp  test_polygon.cpp  test_record.cpp  test_rect.cpp
wasm/: README.md  index.d.ts  index.js  package.json  svg_diagram_wasm.cpp
wasm/demo/: index.js  package-lock.json  package.json
wasm/test/: init.js
wasm/test/docs/: concept.js  diagram_attr.js  edge_attr.js  node_attr.js  subgraph_attr.js  utils.js
